--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       -webkit-font-smoothing: antialiased;
     }
 
+    /* Limita a largura máxima de todas as seções que usam a classe container */
+    .container {
+      max-width: 1300px !important;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     /* Classe específica para garantir 16px em textos de corpo e labels */
     .text-16 {
       font-size: 16px !important;
